k8s-confs/management-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financial-api-microservice
  template:
    metadata:
      labels:
        app: financial-api-microservice
    spec:
      containers:
        - name: app
          image: menoita99/management_api:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
