k8s-confs/service-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: app
          image: learnk8s/knote-java:1.0.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
