k8s-confs/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
spec:
  selector:
    app: financial-api
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
