k8s-confs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: financial-ingress
spec:
  rules:
  - http:
      paths:
      - path: /management-service/*
        backend:
          serviceName: management-service
          servicePort: 8080
      - path: /service-service/*
        backend:
          serviceName: service-service
          servicePort: 8081
      - path: /security-service/*
        backend:
          serviceName: security-service
          servicePort: 8082
